--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     
 </head>
-<script>alert("Hello word from javascript")</script>
+<script src="./video2/video2.js"></script>
 <body>
     <h1>Welcome to my home</h1>
 </body>
