--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <script src="./video2/video2.js"></script>
 <body>
-    <h1>Welcome to my home</h1>
+    <h1>Welcome to my home hehe</h1>
 </body>
 </html>
